--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-"<!doctype html>"  
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Module2 Assignment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<p id="heading">Warren Buffett<p>
+<div class="row">
+    <div class="col-lg-4 col-md-6">
+        <div class="section"><section-title id="st1">Strategy</section-title>He has a clear strategy for making money. He often says, "The first rule of investing is don't lose money; the second rule is don't forget Rule No. 1." It's a strategy he employs in his personal life as well as in his profession. It begins by living far below his means.</div>
+    </div>
+    <div class="col-lg-4 col-md-6">
+        <div class="section"><section-title id="st2">Salary</section-title>Despite a net worth measured in billions, he earns a base salary of $100,000 a year at Berkshire Hathaway. It's a salary that has not changed in 25 years. A man of simple tastes, including watching sports on television and eating junk food, he easily supports his modest standard of living with this salary.</div>
+    </div>
+    
+    <div class="col-lg-4 col-md-12">
+        <div class="section"><section-title id="st3">Success</section-title>His definition of personal success and luxury, which he revealed during an interview with CNBC, provides additional insight into his philosophy. "Success is really doing what you love and doing it well. It's as simple as that. Really getting to do what you love to do everyday - that's really the ultimate luxuy. your standard of living is not equal to your cost of living." And what he loves to do everyday is work at Berkshire Hathaway.</div>
+    </div>
+</div>
+</body>
+</html>
